<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">همراه سلامت</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">ورود به سامانه</string>
    <string name="lbl_phone">شماره تلفن</string>
    <string name="lbl_pass">کلمه عبور</string>
    <string name="lbl_pass_confirm">تکرار کلمه عبور</string>
    <string name="lbl_national_id">کد ملی</string>
    <string name="lbl_validation_code">کد دریافتی</string>
    <string name="title_activity_home">خانه</string>
    <string name="lbl_exit">خروج</string>
    <string name="lbl_help">راهنما</string>
    <string name="lbl_spo2_value">Spo2 %</string>
    <string name="lbl_spo2_pr">Pulse</string>
    <string name="lbl_connect">اتصال به دستگاه</string>
    <string name="lbl_disconnect">قطع اتصال</string>
    <string name="lbl_day">روز</string>
    <string name="lbl_month">ماه</string>
    <string name="lbl_year">سال</string>
    <string name="lbl_firstname">نام</string>
    <string name="lbl_lastname">نام خانوادگی</string>
    <string name="lbl_natid">شماره ملی</string>
    <string name="lbl_birthprovince">استان محل تولد</string>
    <string name="lbl_resprovince">استان محل سکونت</string>
    <string name="lbl_edulevel">میزان تحصیلات</string>
    <string name="lbl_gender">جنسیت</string>
    <string name="lbl_email">پست الکترونیکی</string>
    <string name="lbl_birthdate">تاریخ تولد</string>
    <string name="lbl_marital_status">وضعیت تأهل</string>
    <string name="lbl_up">فشار بالا</string>
    <string name="lbl_down">فشار پائین</string>
    <string name="lbl_blood_pressure">فشار خون</string>
    <string name="lbl_heartrate">ضربان قلب</string>
    <string name="lbl_glucose">قند خون</string>
    <string name="lbl_spo2">اکسیژن خون</string>
    <string name="btn_back">Back</string>
    <string name="btn_save_and_visit">Save and Visit</string>
    <string name="btn_edit_and_send_visit">Edit and Send Visit</string>
    <string name="btn_delete_visit">Delete Visit</string>
    <string name="radio_male">مرد</string>
    <string name="radio_female">زن</string>
    <string name="radio_single">مجرد</string>
    <string name="radio_married">متأهل</string>
    <string name="title_activity_devices">DevicesActivity</string>
    <string name="title_activity_splash">همراه سلامت</string>
    <string name="title_activity_charts_cb">Charts CardioBlue Activity</string>
    <string name="title_activity_register_confrim">تأیید ثبت نام</string>
    <string name="registeration_complete_message">ثبت نام شما تکمیل گردید و اطلاعات حساب کاربری شما به قرار زیر است</string>
    <string name="registeration_complete_username_label">نام کاربری</string>
    <string name="registeration_complete_password_label">کلمه عبور</string>
    <string name="title_activity_parameters_main">ParametersMainActivity</string>
    <string name="title_activity_personal_info">ویرایش اطلاعات شخصی</string>
    <string name="title_activity_submit_health">ارسال اطلاعات سلامت</string>
    <string name="title_activity_medical_message">MedicalMessageActivity</string>
    <string name="activity_medical_message">پیام جدیدی از پزشک</string>
    <string name="lbl_oxygen_pulse">پالس</string>
    <string name="lbl_oxygen_percent">درصد اکسیژن خون</string>
    <string name="title_activity_signup">ثبت نام در سیستم</string>

</resources>
