<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PersonalInfoActivity" >

    <ScrollView
        android:id="@+id/scrollLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:id="@+id/infoLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/login_horizontal_margin"
            android:weightSum="11" >

            <EditText
                android:id="@+id/editFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="20"
                android:hint="@string/lbl_firstname"
                android:inputType="textPersonName"
                android:textSize="@dimen/login_text_size" />

            <EditText
                android:id="@+id/editLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="20"
                android:hint="@string/lbl_lastname"
                android:inputType="textPersonName"
                android:textSize="@dimen/login_text_size" />

            <EditText
                android:id="@+id/editNatID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="20"
                android:hint="@string/lbl_natid"
                android:inputType="number"
                android:textSize="@dimen/login_text_size" />

            <TextView
                android:id="@+id/txtViewBirthProvince"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:text="@string/lbl_birthprovince"
                android:textSize="@dimen/login_text_size" />

            <Spinner
                android:id="@+id/spinnerResidenceProvince"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/txtViewResidenceProvince"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:text="@string/lbl_resprovince"
                android:textSize="@dimen/login_text_size" />

            <Spinner
                android:id="@+id/spinnerBirthProvince"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/txtViewEducationLevel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:text="@string/lbl_edulevel"
                android:textSize="@dimen/login_text_size" />

            <Spinner
                android:id="@+id/spinnerEduLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:id="@+id/genderLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="@dimen/login_horizontal_margin"
                android:layout_marginTop="@dimen/login_horizontal_margin" >

                <LinearLayout
                    android:id="@+id/radioGenderLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/login_vertical_margin"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/login_horizontal_margin"
                        android:layout_weight="1"
                        android:text="@string/radio_female" />

                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/radio_male" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txtViewGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/lbl_gender"
                    android:textSize="@dimen/login_text_size" />
            </LinearLayout>

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_horizontal_margin"
                android:ems="20"
                android:hint="@string/lbl_email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/login_text_size" />

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="20"
                android:hint="@string/lbl_phone"
                android:inputType="phone"
                android:textSize="@dimen/login_text_size" />

            <TextView
                android:id="@+id/txtViewBirthDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/lbl_birthdate"
                android:textSize="@dimen/login_text_size" />

            <LinearLayout
                android:id="@+id/birthDayLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal" >

                <Spinner
                    android:id="@+id/spinnerBirthDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/login_horizontal_margin" />

                <TextView
                    android:id="@+id/txtViewBirthDay"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/lbl_day" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/birthMonthLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal" >

                <Spinner
                    android:id="@+id/spinnerBirthMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/login_horizontal_margin" />

                <TextView
                    android:id="@+id/txtViewBirthMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/lbl_month" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/birthYearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal" >

                <Spinner
                    android:id="@+id/spinnerBirthYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/login_horizontal_margin" />

                <TextView
                    android:id="@+id/txtViewBirthYear"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/lbl_year" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/maritalLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="@dimen/login_horizontal_margin"
                android:layout_marginTop="@dimen/login_horizontal_margin" >

                <LinearLayout
                    android:id="@+id/radioMaritalLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/login_vertical_margin"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/radioMarried"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/login_horizontal_margin"
                        android:layout_weight="1"
                        android:text="@string/radio_married" />

                    <RadioButton
                        android:id="@+id/radioSingle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/radio_single" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txtViewMaritalStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/lbl_marital_status"
                    android:textSize="@dimen/login_text_size" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/imageButtonSubmit"
                android:layout_width="@dimen/info_button_width"
                android:layout_height="@dimen/info_button_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/login_vertical_margin"
                android:background="@drawable/btn_style_submit" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>