<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SubmitHealthActivity" >

    <LinearLayout
        android:id="@+id/submitHealthMainLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/pressureInnerLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/editPressureLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:hint="@string/lbl_down"
                android:inputType="number"
                android:textSize="@dimen/login_text_size" />

            <EditText
                android:id="@+id/editPressureHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_horizontal_margin"
                android:ems="5"
                android:hint="@string/lbl_up"
                android:inputType="number"
                android:textSize="@dimen/login_text_size" />
        </LinearLayout>

        <EditText
            android:id="@+id/editHeartRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:ems="5"
            android:hint="@string/lbl_heartrate"
            android:inputType="number"
            android:textSize="@dimen/login_text_size" />

        <EditText
            android:id="@+id/editGlucose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:ems="5"
            android:inputType="number"
            android:textSize="@dimen/login_text_size"
            android:hint="@string/lbl_glucose" />

        <EditText
                android:id="@+id/editOxygenPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:ems="8"
                android:inputType="number"
                android:textSize="@dimen/login_text_size"
                android:hint="@string/lbl_oxygen_percent" />

        <ImageButton
            android:id="@+id/imgBtnSend"
            android:layout_width="@dimen/submit_button_width"
            android:layout_height="@dimen/submit_button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/login_vertical_margin"
            android:background="@drawable/btn_style_send_info" />
    </LinearLayout>

</RelativeLayout>