<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignupActivity" >

    <LinearLayout
        android:id="@+id/layoutSignupMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editSignupPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_horizontal_margin"
            android:ems="11"
            android:gravity="center"
            android:hint="@string/lbl_phone"
            android:inputType="phone"
            android:textSize="@dimen/login_text_size" />

        <EditText
            android:id="@+id/editSignupNationalID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_horizontal_margin"
            android:ems="11"
            android:gravity="center"
            android:hint="@string/lbl_national_id"
            android:inputType="number"
            android:textSize="@dimen/login_text_size"
            android:visibility="gone" />

        <EditText
            android:id="@+id/editSignupPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_horizontal_margin"
            android:ems="11"
            android:gravity="center"
            android:hint="@string/lbl_pass"
            android:inputType="textPassword"
            android:textSize="@dimen/login_text_size"
            android:visibility="gone" />

        <EditText
            android:id="@+id/editSignupPassConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_horizontal_margin"
            android:ems="11"
            android:gravity="center"
            android:hint="@string/lbl_pass_confirm"
            android:inputType="textPassword"
            android:textSize="@dimen/login_text_size"
            android:visibility="gone" />

        <EditText
            android:id="@+id/editSignupValidation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_horizontal_margin"
            android:ems="11"
            android:gravity="center"
            android:hint="@string/lbl_validation_code"
            android:inputType="number"
            android:textSize="@dimen/login_text_size"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/layoutSignupButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <ImageButton
                android:id="@+id/btnSignupSubmit"
                android:layout_width="@dimen/info_button_width"
                android:layout_height="@dimen/info_button_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/login_vertical_margin"
                android:background="@drawable/btn_style_submit"
                android:visibility="invisible" />

            <ImageButton
                android:id="@+id/btnSignupGetCode"
                android:layout_width="@dimen/info_button_width"
                android:layout_height="@dimen/info_button_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/login_vertical_margin"
                android:background="@drawable/btn_style_get_code"
                android:visibility="visible" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>