<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ParametersMainActivity" >

    <LinearLayout
        android:id="@+id/connectionsLayout"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/thumbsLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connectionsLayout"
        android:layout_centerHorizontal="true"
        android:gravity="fill_horizontal" >

        <ImageButton
            android:id="@+id/imgBtnThumb1"
            android:layout_width="256dp"
            android:layout_height="170dp"
            android:background="@drawable/btn_01"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/imgBtnThumb2"
            android:layout_width="256dp"
            android:layout_height="170dp"
            android:layout_toRightOf="@+id/imgBtnThumb1"
            android:background="@drawable/btn_01"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/imgBtnThumb3"
            android:layout_width="256dp"
            android:layout_height="170dp"
            android:layout_toRightOf="@+id/imgBtnThumb2"
            android:background="@drawable/btn_01"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/imgBtnThumb4"
            android:layout_width="256dp"
            android:layout_height="170dp"
            android:layout_toRightOf="@+id/imgBtnThumb3"
            android:background="@drawable/btn_01"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/imgBtnThumb5"
            android:layout_width="256dp"
            android:layout_height="170dp"
            android:layout_toRightOf="@+id/imgBtnThumb4"
            android:background="@drawable/btn_01"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/imgBtnThumb6"
            android:layout_width="256dp"
            android:layout_height="170dp"
            android:layout_below="@+id/imgBtnThumb1"
            android:layout_weight="1"
            android:background="@drawable/btn_01"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/imgBtnThumb7"
            android:layout_width="256dp"
            android:layout_height="170dp"
            android:layout_below="@+id/imgBtnThumb1"
            android:layout_toRightOf="@+id/imgBtnThumb6"
            android:layout_weight="1"
            android:background="@drawable/btn_01"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/imgBtnThumb8"
            android:layout_width="256dp"
            android:layout_height="170dp"
            android:layout_below="@+id/imgBtnThumb1"
            android:layout_toRightOf="@+id/imgBtnThumb7"
            android:layout_weight="1"
            android:background="@drawable/btn_01"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/imgBtnThumb9"
            android:layout_width="256dp"
            android:layout_height="170dp"
            android:layout_below="@+id/imgBtnThumb1"
            android:layout_toRightOf="@+id/imgBtnThumb8"
            android:layout_weight="1"
            android:background="@drawable/btn_01"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/imgBtnThumb10"
            android:layout_width="256dp"
            android:layout_height="170dp"
            android:layout_below="@+id/imgBtnThumb1"
            android:layout_toRightOf="@+id/imgBtnThumb9"
            android:layout_weight="1"
            android:background="@drawable/btn_01"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/imgBtnThumb11"
            android:layout_width="256dp"
            android:layout_height="170dp"
            android:layout_below="@+id/imgBtnThumb6"
            android:background="@drawable/btn_01"
            android:scaleType="fitCenter" />
        
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="fill_parent"
        android:layout_height="130dp"
        android:layout_below="@+id/thumbsLayout"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >
        
        <Button
            android:id="@+id/btnSave"
            android:layout_width="256dp"
            android:layout_height="100dp"
            android:text="@string/btn_save_and_visit"
            android:background="@drawable/btn_01" />
        
        <Button
            android:id="@+id/Edit"
            android:layout_width="256dp"
            android:layout_height="100dp"
            android:text="@string/btn_edit_and_send_visit"
            android:background="@drawable/btn_01" />
        
        <Button
            android:id="@+id/Delete"
            android:layout_width="256dp"
            android:layout_height="100dp"
            android:text="@string/btn_delete_visit"
            android:background="@drawable/btn_01" />
        
        <Button
            android:id="@+id/Back"
            android:layout_width="256dp"
            android:layout_height="100dp"
            android:text="@string/btn_back"
            android:background="@drawable/btn_01" />
    </LinearLayout>

</RelativeLayout>