<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterConfrim" >

    <ImageView
        android:id="@+id/imageViewBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:scaleType="fitStart"
        android:src="@drawable/banner" />

    <TextView
        android:id="@+id/textViewConfirmMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageViewBanner"
        android:layout_margin="@dimen/login_horizontal_margin"
        android:text="@string/registeration_complete_message"
        android:textSize="@dimen/login_text_size" />

    <RelativeLayout
        android:id="@+id/userInfoLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewConfirmMessage"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/textViewConfirmUserNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/login_horizontal_margin"
            android:layout_marginTop="@dimen/login_vertical_margin"
            android:ems="4"
            android:text="@string/registeration_complete_username_label"
            android:textSize="@dimen/login_text_size" />

        <TextView
            android:id="@+id/textViewConfirmUserNameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/login_vertical_margin"
            android:layout_marginTop="@dimen/login_vertical_margin"
            android:layout_toLeftOf="@+id/textViewConfirmUserNameLabel"
            android:text="09197343303"
            android:textSize="@dimen/login_text_size" />

        <TextView
            android:id="@+id/textViewConfirmPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textViewConfirmUserNameLabel"
            android:layout_marginRight="@dimen/login_horizontal_margin"
            android:layout_marginTop="@dimen/login_horizontal_margin"
            android:ems="4"
            android:text="@string/registeration_complete_password_label"
            android:textSize="@dimen/login_text_size" />

        <TextView
            android:id="@+id/textViewConfirmPasswordValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewConfirmUserNameLabel"
            android:layout_marginRight="@dimen/login_vertical_margin"
            android:layout_marginTop="@dimen/login_horizontal_margin"
            android:layout_toLeftOf="@+id/textViewConfirmPasswordLabel"
            android:text="32468646157"
            android:textSize="@dimen/login_text_size" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userInfoLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/generic_vertical_margin_big"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/imgBtnStartApp"
            android:layout_width="@dimen/submit_button_width"
            android:layout_height="@dimen/submit_button_height"
            android:background="@drawable/btn_style_startapp" />

        <ImageButton
            android:id="@+id/imgBtnExit"
            android:layout_width="@dimen/submit_button_width"
            android:layout_height="@dimen/submit_button_height"
            android:layout_marginTop="@dimen/login_horizontal_margin"
            android:background="@drawable/btn_style_exit" />
    </LinearLayout>

</RelativeLayout>